--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,75 @@
 body {
   background: papayawhip;
+  min-width: 350px;
+  min-height: 350px;
 }
+  .container {
+    display: grid;
+  }
+  
+  .a {
+    text-align: center;
+    border: 1px solid black;
+    max-width: 100%;
+    padding: 100px;
+    border-radius: 1%;
+    margin: 30px;
+  }
+  
+  .b {
+    text-align: center;
+    border: 1px solid black;
+    max-width: 100%;
+    padding: 300px;
+    border-radius: 1%;
+    margin: 30px;
+  }
+  
+  .c {
+    text-align: center;
+    border: 1px solid black;
+    max-width: 100%;
+    padding: 100px;
+    border-radius: 1%;
+    margin: 30px;
+  }
+  
+  .d {
+    text-align: center;
+    border: 1px solid black;
+    max-width: 100%;
+    padding: 100px;
+    border-radius: 1%;
+    margin: 30px;
+  }
+
+  .e {
+    text-align: center;
+    border: 1px solid black;
+    max-width: 100%;
+    padding: 100px;
+    border-radius: 1%;
+    margin: 30px;
+  }
+
+  .f {
+    text-align: center;
+    border: 1px solid black;
+    max-width: 100%;
+    padding: 100px;
+    border-radius: 1%;
+    margin: 30px;
+  }
+  @media (min-width: 350){
+    .container > * {
+      padding: 25;
+      font-size: medium;
+    }
+  }
+  
+  @media (min-width: 500){
+    .container > * {
+      padding: 75;
+      font-size:larger;
+    }
+  }
